...
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dark_purple">

        </ImageButton>

        <Spinner
            android:id="@+id/o_entrant_list_spinner"
            style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/dark_purple"
            android:fontFamily="@font/roboto_medium"
...

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/o_entrant_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

...
