...
            android:name="currentRole"
            app:argType="string"
            android:defaultValue="organiser" />
    </fragment>

    <fragment
        android:id="@+id/view_entrants_fragment"
        android:name="com.example.pygmyhippo.organizer.ViewEntrantsFragment"
        android:label="view entrants"
        tools:layout="@layout/o_view_entrants"
        android:background="@color/dark_purple">
        <argument
            android:name="eventID"
...
