...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/u_eventImageView"
                app:layout_constraintVertical_bias="0.02" />

            <!--    text fields - event name -->
            <TextView
                android:id="@+id/u_eventNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="Hippo Party"
                android:textSize="36sp"
                android:textStyle="bold"
...
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/u_registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="Register" />

        <androidx.constraintlayout.widget.ConstraintLayout
...
